corr authMiddlware, upd swagger
